# reviewer-intelligence-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  RIA_CLAUDE_CODE_SPEC.md  app.py  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
cli/: main.py
prompts/: gap_analyzer_system.md  profiler_system.md  simulator_system.md  strategist_system.md  writer_system.md
src/: config.py  pipeline.py
src/acquisition/: __init__.py  manual_upload.py  paper_store.py  pdf_downloader.py  semantic_scholar.py  snu_proxy.py  unpaywall.py
src/agents/: __init__.py  base_agent.py  gap_analyzer.py  profiler.py  simulator.py  strategist.py  writer.py
src/optimization/: __init__.py  batch_processor.py  cost_tracker.py
src/utils/: __init__.py  docx_parser.py  logging_config.py  pdf_parser.py  reference_extractor.py
src/vectordb/: __init__.py  chroma_store.py
tests/: conftest.py  test_acquisition.py  test_agents.py  test_cli.py  test_config.py  test_optimization.py  test_pipeline.py  test_utils.py
