[project]
name = "reviewer-intelligence-agent"
version = "0.1.0"
description = "Multi-agent system for anticipating and responding to academic peer reviewers"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "streamlit>=1.38.0",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "tenacity>=8.2.0",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
ria = "cli.main:cli"
